[tool.poetry]
name = "mcglm"
version = "0.2.1"
description = "Multivariate Covariance Generalized Linear Models"
authors = ["Jean Carlos Maia <jeanclmaia@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<=3.9"
patsy = "^0.5.2"
matplotlib = "^3.5.2"
statsmodels = "^0.13.2"
scipy = "1.7.1"
numpy = "1.22"
pandas = "^1.3.3"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.3.0"
coverage = "^6.4.1"
jupyter = "^1.0.0"
pylint = "^2.14.3"
jupyterlab = "^3.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


