[tool.poetry]
name = "mcglm"
version = "0.2.4"
description = "Multivariate Covariance Generalized Linear Models"
authors = ["Jean Carlos Faoot Maia <jeanclmaia@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
patsy = "^0.5.2"
matplotlib = "^3.5.2"
statsmodels = "^0.13.2"
pandas = "^1.3.3"
numpy = "^1.25"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.3.0"
coverage = "^6.4.1"
jupyter = "^1.0.0"
pylint = "^2.14.3"
jupyterlab = "^3.6.1"
seaborn = "^0.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


